AGREGAR FONT AWESOME

--- a/galeria.html
+++ b/galeria.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="shortcut icon" href="images/iconos/icons8-mando-windows-11-color-32.ico"> 
     <link href="css/lightbox.css" rel="stylesheet">
     <meta name="author" content="Romero Bernardo Nahuel">
