--- a/contacto.html
+++ b/contacto.html
@@ -17,6 +17,7 @@
         <div class="icono-principal"  title="The Mandalorian - Inicio" >
             <a href="index.html" ><img src="images/iconos/mandalorian-titulo_PNG.png" width="100%"  height="80px" alt="Logo The Mandalorian"></a>
         </div>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
         <nav id="menu_bar" class="">
             <ul>
                 <li title="Inicio"><a href="index.html" >Inicio</a>
