Sacar el estilo en etiqueta de las imágenes de index

--- a/index.html
+++ b/index.html
@@ -51,19 +51,19 @@
             <div class="inicio">
                 <div class="imgsInicio" title="Click aqui lleva a Historia">
                     <a href="historia.html">
-                        <img style="height:250px;" src="images/señora-rana-dee-bradley-baker-y-misty-rosas.jpg" alt="La Señora Rana">
+                        <img src="images/señora-rana-dee-bradley-baker-y-misty-rosas.jpg" alt="La Señora Rana">
                         <h4>Serie de televisión de Star Wars</h4>
                     </a>
                 </div>
                 <div class="imgsInicio" title="Click aqui lleva a Historia">
                     <a href="historia.html">
-                        <img style="height:250px;" src="images/mando y yoda encuentro.jpg" alt="Mando y grogu encuentro">
+                        <img src="images/mando y yoda encuentro.jpg" alt="Mando y grogu encuentro">
                         <h4>Din y Grogu</h4>
                     </a>
                 </div>
                 <div class="imgsInicio" title="Click aqui lleva a Historia">
                     <a href="historia.html">
-                        <img style="height:250px;" src="images/book-table-img.jpg" alt="Mando animacion">
+                        <img src="images/book-table-img.webp" alt="Mando animacion">
                         <h4>Lanzada el 12 de noviembre de 2019</h4>
                     </a>
                 </div>
