--- a/galeria.html
+++ b/galeria.html
@@ -42,7 +42,7 @@
         
         <article class="secundario">
             <div class="titulos">
-                <h1>GALERIA</h1>
+                <h1>GALERÍA</h1>
             </div>
             <div class="galeria-ct">
                 <a class="example-image-link" href="images/Galeria/galeria-1-grande.jpg" data-lightbox="mandalorian" data-title="Mando caminando."><img class="example-image" src="images/Galeria/galeria-1.jpg" alt=""/></a>
