--- a/reseñas.html
+++ b/reseñas.html
@@ -40,14 +40,14 @@
                 <h1>RESEÑAS</h1>
         </div>
         <section class="secundario">
-            <div class="inicio">
+            <div class="reseñas">
                 <div class="imgsInicio" title="Ver más reseñas">
                     <a href="https://www.google.com/search?q=rese%C3%B1as+mandalorian&rlz=1C1VDKB_enAR1093AR1093&oq=rese%C3%B1as+mandalorian&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIHCAEQIRigATIHCAIQIRifBTIHCAMQIRifBTIHCAQQIRifBTIHCAUQIRifBTIHCAYQIRifBTIHCAcQIRifBTIHCAgQIRifBTIHCAkQIRifBdIBCDYxNTBqMGo3qAIAsAIA&sourceid=chrome&ie=UTF-8">
                         <div>
-                            <img style="height:250px;" src="images/FtgykHIXsAAkpWd.jpg" alt="kuiil montando un  Blurrg">
+                            <img style="width:100px; height:100px;" src="images/iconos/icons01.ico" alt="kuiil montando un  Blurrg">
                         </div>
                         <h4>Hitori Torres</h4>
-                        <p style="overflow: scroll; height: 300px;">Sin duda (como gran fan de Star Wars que soy) es mejor que Clone Wars.
+                        <p>Sin duda (como gran fan de Star Wars que soy) es mejor que Clone Wars.
                             Primero: La estetica es increible.
                             Segundo: La musica es gloriosa, muy diferente a algo de Star Wars pero no se siente como si no fuera de Star Wars.
                             Tercero: Los personajes, es cierto que no son los mejores desarrollados pero tienen un pasado coherente y que tiene relación con la historia. Obvio son nuevos personajes pero tienen relación al ser parte de la historia (te hablo a ti Kylo Ren, la madre el personaje más irrelevante). No me puedo saltar que Mando y Baby Yoda (o Grogu) son incriblemente bien hechos en personalidad y en historia. La actuación no es la mejor pero es la primera serie live-action de Star Wars y al final no esta mal la actuación.. no como otras series y peliculas que prometian y son malisimas.
@@ -58,10 +58,10 @@
                 <div class="imgsInicio" title="Ver más reseñas">
                     <a href="https://www.google.com/search?q=rese%C3%B1as+mandalorian&rlz=1C1VDKB_enAR1093AR1093&oq=rese%C3%B1as+mandalorian&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIHCAEQIRigATIHCAIQIRifBTIHCAMQIRifBTIHCAQQIRifBTIHCAUQIRifBTIHCAYQIRifBTIHCAcQIRifBTIHCAgQIRifBTIHCAkQIRifBdIBCDYxNTBqMGo3qAIAsAIA&sourceid=chrome&ie=UTF-8">
                         <div>
-                            <img style="height:250px;"  src="images/mando apuntando con su arma.webp" alt="Mando y grogu encuentro">
+                            <img style="width:100px; height:100px;" src="images/iconos/icons01.ico" alt="Mando y grogu encuentro">
                         </div>
                         <h4>Diego Rojas</h4>
-                        <p style="overflow: scroll; height: 300px;">Al igual que cómo lo fue y sigue siendo con Star Wars: The Force Awakens, esta es una gran secuela de la trilogía original.
+                        <p>Al igual que cómo lo fue y sigue siendo con Star Wars: The Force Awakens, esta es una gran secuela de la trilogía original.
                             La relación que hay entre Din y Grogu me agrada muchísimo, la historia que sigue me parece interesante y una atmósfera que te deja una sensación asombrosa con cada episodio, con personajes geniales y una historia refrescante que junta muy bien el Western y la ciencia ficción. La producción, el diseño de vestuario, los revolucionarios efectos visuales, la cinematografía y la edición se encargan de construir un mundo interesante para la saga.
                             Este es un equilibrio verdaderamente notable entre lo antiguo y lo nuevo. La narración sabe centrarse completamente en un personaje, y haciendo que este personaje sea tan interesante como al resto protagonizado por un gran elenco. Su ejecución en todos los apartados logra consagrarse como una digna serie para la saga.</p>
                     </a>
@@ -69,10 +69,10 @@
                 <div class="imgsInicio" title="Ver más reseñas">
                     <a href="https://www.google.com/search?q=rese%C3%B1as+mandalorian&rlz=1C1VDKB_enAR1093AR1093&oq=rese%C3%B1as+mandalorian&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIHCAEQIRigATIHCAIQIRifBTIHCAMQIRifBTIHCAQQIRifBTIHCAUQIRifBTIHCAYQIRifBTIHCAcQIRifBTIHCAgQIRifBTIHCAkQIRifBdIBCDYxNTBqMGo3qAIAsAIA&sourceid=chrome&ie=UTF-8">
                         <div>
-                            <img style="height:250px;"  src="images/Mando con g11.jpg" alt="Mando animacion">
+                            <img style="width:100px; height:100px;" src="images/iconos/icons01.ico"alt="Mando animacion">
                         </div>
                         <h4>Carlos Jimenez</h4>
-                        <p style="overflow: scroll; height: 300px;">En mi opinión, lo mejor que se ha hecho de Star Wars en los últimos 20 años.Me encanta el argumento sencillo pero efectivo. 
+                        <p>En mi opinión, lo mejor que se ha hecho de Star Wars en los últimos 20 años.Me encanta el argumento sencillo pero efectivo. 
                             Que todos los personajes principales tengan una historia interesante detrás es muy importante para que algo así funcione, y funcione por muchas temporadas(esperemos Q no compliquen demasiado el argumento). 
                             Suelo prestar mucha atención también a las referencias entre pelis de Star Wars. Creo q en esta serie están muy muy cuidadas,cosa que es de agradecer viendo la última trilogía. 
                             En especial me encanta las referencias a la mítica "pericia" con las armas de los soldados imperiales y el regreso a Mos Eisley.Y a esa cantina en la q no podían entrar androides, os aconsejo Q os fijéis en el detalle del camarero, muy curioso.</p>
