--- a/historia.html
+++ b/historia.html
@@ -41,11 +41,11 @@
             <h1>HISTORIA</h1>
         </div>
         <article class="secundario">
-            <div class="galeria-ct">
+            <div class="historia-ct">
                 <div class="imgsHistoria">
                     <a href="#">
                         <img src="images/mandocmu.jpg" alt="Mando con el comisario">
-                        <p style="overflow: scroll; height: 200px;">Cinco años después de los eventos de El Retorno del 
+                        <p>Cinco años después de los eventos de El Retorno del 
                             Jedi y la caída del imperio galáctico, The Mandalorian sigue a Din Djarin, 
                             un cazarrecompensas mandaloriano solitario en los confines de la galaxia.
                             Es contratado por las fuerzas imperiales remanentes para recuperar al niño 
@@ -55,7 +55,7 @@
                     </a>
                 </div>
                 <div class="imgsHistoria">
-                    <p style="overflow: scroll; height: 440px;"><strong>The Mandalorian</strong> es una serie de televisión de <strong>Star Wars</strong> 
+                    <p><strong>The Mandalorian</strong> es una serie de televisión de <strong>Star Wars</strong> 
                     acción en vivo espacial western desarrollada por <strong>Lucasfilm</strong>. La serie 
                     toma lugar alrededor de cinco años después de los eventos de 
                     Star Wars: Episodio VI El Retorno del Jedi y se emite exclusivamente 
@@ -78,7 +78,7 @@
                 <div class="imgsHistoria">
                     <a href="#">
                         <img src="images/comisario-mando.webp" alt="El mandaloriano Mando">
-                        <p style="overflow: scroll; height: 200px;">En noviembre de 2018, se anunció que Pedro Pascal fue elegido como protagonista.
+                        <p">En noviembre de 2018, se anunció que Pedro Pascal fue elegido como protagonista.
                             Pascal inicialmente pensó que lo elegirían como el personaje de Star Wars, Boba Fett, 
                             debido a las similitudes visuales entre ese personaje y el Mandaloriano,  pero este 
                             último es un personaje separado llamado Din Djarin.  Favreau llamó a Pascal "una estrella 
