--- a/historia.html
+++ b/historia.html
@@ -43,46 +43,47 @@
         <article class="secundario">
             <div class="historia-ct"> 
                 <div class="imgsHistoria">
-                        <p>Cinco años después de los eventos de El Retorno del 
+                        <p><strong>The Mandalorian</strong> es una serie de televisión de <strong>Star Wars</strong> 
+                            acción en vivo espacial western desarrollada por <strong>Lucasfilm</strong>. La serie 
+                            toma lugar alrededor de cinco años después de los eventos de 
+                            Star Wars: Episodio VI El Retorno del Jedi y se emite exclusivamente 
+                            en el servicio de transmisión de <strong>Disney</strong>, Disney+, el cual fue lanzado 
+                            el 12 de noviembre de 2019. Jon Favreau es el guionista y el productor 
+                            ejecutivo de la serie. Los directores incluyen a Dave Filoni, Deborah Chow, 
+                            Rick Famuyiwa, Bryce Dallas Howard y Taika Waititi.
+                            Los episodios de la primera temporada debutaron los viernes a las 8:01 UTC 
+                            (3:01 a. m. EST), con la excepción del primero y séptimo episodios de esa 
+                            temporada. Después de la conclusión de la primera temporada, un detrás de 
+                            escenas de ocho episodios fue lanzado comenzando en mayo de 2020, titulado 
+                            Galería Disney: The Mandalorian. El 30 de octubre de 2020, la segunda temporada 
+                            se estrenó en Disney+. Los episodios de la segunda temporada debutaron los 
+                            viernes a las 8:01 UTC (3:01 a. m. EST). Dos especiales de Galería Disney: 
+                            The Mandalorian sobre cómo se hizo la segunda temporada fueron lanzados después. 
+                            La tercera temporada fue lanzada en 2023, con una cuarta temporada siendo 
+                            escrita actualmente por <strong>Jon Favreau</strong>.
+                            </br></br>
+
+                            <b>Cinco años después</b> de los eventos de El Retorno del 
                             Jedi y la caída del imperio galáctico, The Mandalorian sigue a Din Djarin, 
-                            un cazarrecompensas mandaloriano solitario en los confines de la galaxia.
+                            un <b>cazarrecompensas mandaloriano</b> solitario en los confines de la galaxia.
                             Es contratado por las fuerzas imperiales remanentes para recuperar al niño 
                             Grogu, pero en su lugar huye para protegerlo. Mientras buscan reunir a Grogu 
                             con los de su clase, son perseguidos por Moff Gideon, que quiere usar la conexión
-                            de Grogu con la Fuerza.</p>
-                </div>
-                <div class="imgsHistoria">
-                    <p><strong>The Mandalorian</strong> es una serie de televisión de <strong>Star Wars</strong> 
-                    acción en vivo espacial western desarrollada por <strong>Lucasfilm</strong>. La serie 
-                    toma lugar alrededor de cinco años después de los eventos de 
-                    Star Wars: Episodio VI El Retorno del Jedi y se emite exclusivamente 
-                    en el servicio de transmisión de <strong>Disney</strong>, Disney+, el cual fue lanzado 
-                    el 12 de noviembre de 2019. Jon Favreau es el guionista y el productor 
-                    ejecutivo de la serie. Los directores incluyen a Dave Filoni, Deborah Chow, 
-                    Rick Famuyiwa, Bryce Dallas Howard y Taika Waititi.
-                    Los episodios de la primera temporada debutaron los viernes a las 8:01 UTC 
-                    (3:01 a. m. EST), con la excepción del primero y séptimo episodios de esa 
-                    temporada. Después de la conclusión de la primera temporada, un detrás de 
-                    escenas de ocho episodios fue lanzado comenzando en mayo de 2020, titulado 
-                    Galería Disney: The Mandalorian. El 30 de octubre de 2020, la segunda temporada 
-                    se estrenó en Disney+. Los episodios de la segunda temporada debutaron los 
-                    viernes a las 8:01 UTC (3:01 a. m. EST). Dos especiales de Galería Disney: 
-                    The Mandalorian sobre cómo se hizo la segunda temporada fueron lanzados después. 
-                    La tercera temporada fue lanzada en 2023, con una cuarta temporada siendo 
-                    escrita actualmente por <strong>Jon Favreau</strong>.
-                    </p>
-                </div>
-                <div class="imgsHistoria">
-                        <p">En noviembre de 2018, se anunció que Pedro Pascal fue elegido como protagonista.
-                            Pascal inicialmente pensó que lo elegirían como el personaje de Star Wars, Boba Fett, 
+                            de Grogu con la Fuerza.</br></br>
+                            
+                            En noviembre de 2018, se anunció que <b>Pedro Pascal</b> fue elegido como protagonista.
+                            Pascal inicialmente pensó que lo elegirían como el personaje de <b>Star Wars</b>, Boba Fett, 
                             debido a las similitudes visuales entre ese personaje y el Mandaloriano,  pero este 
-                            último es un personaje separado llamado Din Djarin.  Favreau llamó a Pascal "una estrella 
+                            último es un personaje separado llamado <b>Din Djarin</b>.  Favreau llamó a Pascal "una estrella 
                             de cine clásica" que "tenía la presencia y las habilidades" necesarias para interpretar a 
                             un personaje en gran medida oculto bajo un casco.  El Mandaloriano también es interpretado 
                             por los dobles Brendan Wayne, Lateef Crowder,  y Barry Lowin.  Pascal trabajó con Favreau y 
                             Filoni para grabar el diálogo del personaje más tarde
                             También en noviembre Gina Carano y Nick Nolte habían sido elegidos para los papeles principales.
                         </p>
+                </div>
+                <div class="imgsHistoria" >
+                    <img src="images/escena-de-the-mandalorian-4691.webp" width="75%" alt="Escena de the mandalorian 4691">
                 </div>
             </div>
         </article>
