--- a/historia.html
+++ b/historia.html
@@ -43,7 +43,8 @@
         <article class="secundario">
             <div class="historia-ct"> 
                 <div class="imgsHistoria">
-                        <p><strong>The Mandalorian</strong> es una serie de televisión de <strong>Star Wars</strong> 
+                        <p><strong>The Mandalorian:</strong> 
+                        </br></br> es una serie de televisión de <strong>Star Wars</strong> 
                             acción en vivo espacial western desarrollada por <strong>Lucasfilm</strong>. La serie 
                             toma lugar alrededor de cinco años después de los eventos de 
                             Star Wars: Episodio VI El Retorno del Jedi y se emite exclusivamente 
@@ -83,7 +84,7 @@
                         </p>
                 </div>
                 <div class="imgsHistoria" >
-                    <img src="images/escena-de-the-mandalorian-4691.webp" width="75%" alt="Escena de the mandalorian 4691">
+                    <img src="images/escena-de-the-mandalorian-4691.webp" width="75%"  alt="Escena de the mandalorian 4691">
                 </div>
             </div>
         </article>
