--- a/temporadas.html
+++ b/temporadas.html
@@ -41,7 +41,7 @@
             <h1>TEMPORADAS</h1>
         </div>
         <article >
-            <div  id="1temp" style="padding: 200px 0px 0px 0px;">
+            <div  id="1temp" style="">
                 <h4>1° Temporada:</h4>
                 <p>The Mandalorian Primera Temporada es la primera temporada de la serie de televisión de acción en vivo The Mandalorian que 
                     se estrenó el 12 de noviembre de 2019 en Estados Unidos por Disney+, el actual servicio de transmisión de The Walt Disney 
@@ -64,7 +64,7 @@
                 </p>
             </div>
             <div class="personajes-st"> 
-                <article class="personajes-ar" style="min-height: 320px;">
+                <article class="personajes-ar" style="">
                         <a href="#">
                             <div class="personajes-ct">
                                 <div>
@@ -74,7 +74,7 @@
                         </a>
                 </article>
             </div>
-            <div  id="2temp" style="padding: 200px 0px 0px 0px;">
+            <div  id="2temp" style="">
                 <h4>2° Temporada:</h4>
                 <p>"La nueva temporada introducirá una historia más grande en el mundo. Las historias se vuelven menos aisladas, 
                     aunque cada episodio tiene su propio sabor, y ojalá traigamos más alcance a la serie."
