--- a/temporadas.html
+++ b/temporadas.html
@@ -105,7 +105,7 @@
                         </a>
                 </article>
             </div>
-            <div  id="3temp" style="padding: 200px 0px 0px 0px;">
+            <div  id="3temp" style="">
                 <h4>3° Temporada:</h4>
                 <p>The Mandalorian Tercera Temporada es la tercera temporada de la serie de televisión estadounidense The Mandalorian. 
                     La temporada se estrenó el 1 de marzo de 2023 y tiene lugar después de los sucesos de la serie El Libro de Boba Fett.<br><br>
