--- a/temporadas.html
+++ b/temporadas.html
@@ -41,7 +41,7 @@
             <h1>TEMPORADAS</h1>
         </div>
         <article >
-            <div  id="1temp" style="">
+            <div  id="1temp">
                 <h4>1° Temporada:</h4>
                 <p>The Mandalorian Primera Temporada es la primera temporada de la serie de televisión de acción en vivo The Mandalorian que 
                     se estrenó el 12 de noviembre de 2019 en Estados Unidos por Disney+, el actual servicio de transmisión de The Walt Disney 
@@ -64,7 +64,7 @@
                 </p>
             </div>
             <div class="personajes-st"> 
-                <article class="personajes-ar" style="">
+                <article class="personajes-ar">
                         <a href="#">
                             <div class="personajes-ct">
                                 <div>
@@ -74,7 +74,7 @@
                         </a>
                 </article>
             </div>
-            <div  id="2temp" style="">
+            <div  id="2temp">
                 <h4>2° Temporada:</h4>
                 <p>"La nueva temporada introducirá una historia más grande en el mundo. Las historias se vuelven menos aisladas, 
                     aunque cada episodio tiene su propio sabor, y ojalá traigamos más alcance a la serie."
@@ -93,7 +93,8 @@
                     Lanzamiento: El 8 de septiembre de 2020, Entertainment Weekly reveló las primeras imágenes promocionales de la temporada.
                     El primer tráiler fue lanzado el 15 de septiembre, seguido de un «vistazo» especial durante el medio tiempo del Monday Night Football el 19 de octubre.
                 </p>
-            </div>        
+            </div> 
+            <span id="3temp"></span>       
             <div class="personajes-st"> 
                 <article class="personajes-ar" style="min-height: 320px;">
                         <a href="#">
@@ -105,7 +106,7 @@
                         </a>
                 </article>
             </div>
-            <div  id="3temp" style="">
+            <div>
                 <h4>3° Temporada:</h4>
                 <p>The Mandalorian Tercera Temporada es la tercera temporada de la serie de televisión estadounidense The Mandalorian. 
                     La temporada se estrenó el 1 de marzo de 2023 y tiene lugar después de los sucesos de la serie El Libro de Boba Fett.<br><br>
