--- a/historia.html
+++ b/historia.html
@@ -91,7 +91,7 @@
         <article class="secundario">
             <div class="galeria-ct">
                 <div class="imgsHistoria" title="Ir a 1° temporada">
-                    <a href="temporadas.html#1temp">
+                    <a href="temporadas.html">
                         <h3>1° TEMPORADA</h3>
                         <img src="images/1er-temp.jpg" width="300" height="200" alt="Mando con el falso mandaloriano">
                     </a>
