--- a/temporadas.html
+++ b/temporadas.html
@@ -41,7 +41,7 @@
             <h1>TEMPORADAS</h1>
         </div>
         <article >
-            <div  id="1temp">
+            <div style="padding: 60px 0px 0px 0px ;">
                 <h4>1° Temporada:</h4>
                 <p>The Mandalorian Primera Temporada es la primera temporada de la serie de televisión de acción en vivo The Mandalorian que 
                     se estrenó el 12 de noviembre de 2019 en Estados Unidos por Disney+, el actual servicio de transmisión de The Walt Disney 
@@ -55,7 +55,7 @@
                     crear un episodio entero. Y luego Jon iriía y lo escribiría. Mi proceso es un poco más largo. Me gusta fermentar mis ideas 
                     secretamente con el tiempo. Intentaba crear una ligeramente distitna forma de escribir Star Wars. Jon quería fuertemente 
                     tropos del oeste. Y los del oeste tienen un diálogo muy claro. Los pistoleros no dicen mucho. Así que, eso fue diferente 
-                    para mí."
+                    para mí."<span id="2temp"></span> 
                     ―Dave Filoni.<br><br>
                     Desarrollo: Los guiones de los primeros dos episodios fueron escritos por Jon Favreau durante las vacaciones de diciembre de 2017 y, 
                     para principios de febrero de 2018, Favreau completó los primeros bocetos de los primeros cuatro episodios. La filmación 
@@ -63,7 +63,7 @@
                     coincidió con el cumpleaños de Jon Favreau.<br><br>
                 </p>
             </div>
-            <div class="personajes-st"> 
+            <!-- <div class="personajes-st"> 
                 <article class="personajes-ar">
                         <a href="#">
                             <div class="personajes-ct">
@@ -73,8 +73,8 @@
                             </div>
                         </a>
                 </article>
-            </div>
-            <div  id="2temp">
+            </div> -->
+            <div style="padding: 60px 0px 0px 0px ;">
                 <h4>2° Temporada:</h4>
                 <p>"La nueva temporada introducirá una historia más grande en el mundo. Las historias se vuelven menos aisladas, 
                     aunque cada episodio tiene su propio sabor, y ojalá traigamos más alcance a la serie."
@@ -88,14 +88,13 @@
                     Favreau también regresó como director, junto con el miembro del reparto Carl Weathers y los directores de la primera temporada Dave Filoni
                     , Rick Famuyiwa y Bryce Dallas Howard,así como los recién llegados Peyton Reed y Robert Rodriguez, nuevos directores de la serie.
                     Con menos costos de inicio que la primera temporada, más del presupuesto fue usado para la serie misma. George Lucas visitó el set otra vez, 
-                    y le dio consejos a Filoni sobre dirección. La temporada terminó de filmarse pocos días antes de la pandemia del COVID-19 en marzo de 2020. 
+                    y le dio consejos a Filoni sobre dirección. <span id="3temp"></span>La temporada terminó de filmarse pocos días antes de la pandemia del COVID-19 en marzo de 2020. 
                     El equipo de posproducción se tuvo que adaptar a la cuarentena, con su mayor problema siendo la grabación de la banda sonora.<br><br>
                     Lanzamiento: El 8 de septiembre de 2020, Entertainment Weekly reveló las primeras imágenes promocionales de la temporada.
                     El primer tráiler fue lanzado el 15 de septiembre, seguido de un «vistazo» especial durante el medio tiempo del Monday Night Football el 19 de octubre.
                 </p>
-            </div> 
-            <span id="3temp"></span>       
-            <div class="personajes-st"> 
+            </div>      
+            <!-- <div class="personajes-st"> 
                 <article class="personajes-ar" style="min-height: 320px;">
                         <a href="#">
                             <div class="personajes-ct">
@@ -105,8 +104,8 @@
                             </div>
                         </a>
                 </article>
-            </div>
-            <div>
+            </div> -->
+            <div style="padding: 60px 0px 0px 0px ;">
                 <h4>3° Temporada:</h4>
                 <p>The Mandalorian Tercera Temporada es la tercera temporada de la serie de televisión estadounidense The Mandalorian. 
                     La temporada se estrenó el 1 de marzo de 2023 y tiene lugar después de los sucesos de la serie El Libro de Boba Fett.<br><br>
