--- a/contacto.html
+++ b/contacto.html
@@ -36,12 +36,11 @@
             </ul>
         </nav>
     </header>
-    <section>
-        <div class="titulos">
-                <h1>CONTACTO</h2>
-        </div>
+    <div class="titulos">
+        <h1>CONTACTO</h2>
+    </div>
+    <section class="secundario">
         <article class="Contacto">
-            
             <form action="#" method="post">
                 <div class="formulario">
                 
