Quitar barra de scroll

--- a/personajes.html
+++ b/personajes.html
@@ -243,7 +243,7 @@
                                 <img src="images/Personajes/ig-11-taika-waititi.webp" height="300px" width="400px" alt="IG 11">
                             </div>
                             <h4>IG 11 (Taika Waititi)</h4>
-                            <p style="overflow: scroll; height: 150px;">Taika Waititi dirige varios episodios de las dos temporadas de The Mandalorian 
+                            <p>Taika Waititi dirige varios episodios de las dos temporadas de The Mandalorian 
                             (y ha dirigido películas como Thor: Ragnarok o Jojo Rabbit) y también pone voz a IG-11, el robot 
                             asesino que aparece en el primer episodio de la serie y que después regresa reprogramado para proteger 
                             a Grogu.</p>
