--- a/historia.html
+++ b/historia.html
@@ -114,10 +114,10 @@
 
     <footer>
         <div class="redes">
-            <a href="https://www.facebook.com/themandaloriannet/"><img src="images/redes/facebookN.png" alt="Facebook"></a> 
-            <a href="https://x.com/themandalorian"><img src="images/redes/X.png" alt="x"></a> 
-            <a href="https://www.youtube.com/watch?v=X9xJaQK5BjQ"><img src="images/redes/youtubeN.png" alt="Youtube"></a> 
-            <a href="https://www.instagram.com/themandalorian/"><img src="images/redes/instagramN.png" alt="Instagram"></a> 
+            <a href="https://www.facebook.com/themandaloriannet/" target="_blank"><img src="images/redes/facebookN.png" alt="Facebook"></a> 
+            <a href="https://x.com/themandalorian" target="_blank"><img src="images/redes/X.png" alt="x"></a> 
+            <a href="https://www.youtube.com/watch?v=X9xJaQK5BjQ" target="_blank"><img src="images/redes/youtubeN.png" alt="Youtube"></a> 
+            <a href="https://www.instagram.com/themandalorian/" target="_blank"><img src="images/redes/instagramN.png" alt="Instagram"></a> 
         </div>
         <div class="copyright-ct">  
             <img src="images/baby-yoda.gif" alt="baby-yoda">
