LINKS A OTRAS PAG

--- a/personajes.html
+++ b/personajes.html
@@ -44,7 +44,7 @@
         <article class="personajes">
             <div class="imgsInicio">
                 <!-- <article class="personajes-ar"> -->
-                    <a href="#">
+                    <a href="https://es.wikipedia.org/wiki/Pedro_Pascal" target="_blank">
                         <div class="personajes-ct">
                             <div>
                                 <img src="images/Personajes/mando.jpg" height="300px" width="400px" alt="Mando">
@@ -62,7 +62,7 @@
             </div>
             <div class="imgsInicio">
                 <!-- <article class="personajes-ar"> -->
-                    <a href="#">
+                    <a href="https://es.wikipedia.org/wiki/Grogu" target="_blank">
                         <div class="personajes-ct">
                             <div>
                                 <img src="images/Personajes/Grogu.jpg" height="300px" width="400px" alt="Grogu">
@@ -78,10 +78,10 @@
             </div>
             <div class="imgsInicio">
                 <!-- <article class="personajes-ar"> -->
-                    <a href="#">
+                    <a href="https://es.wikipedia.org/wiki/Gina_Carano" target="_blank">
                         <div class="personajes-ct">
                             <div>
-                                <img src="images/Personajes/CaraDuneimg.jpg" height="300px" width="400px" alt="Mando animacion">
+                                <img src="images/Personajes/CaraDuneimg.jpg" height="300px" width="400px" alt="Cara Dune (Gina Carano)">
                             </div>
                             <h4>Cara Dune (Gina Carano)</h4>
                             <p >Gina Carano, actriz presente en películas como Fast & Furious 6 o 
@@ -95,7 +95,7 @@
             </div>
             <div class="imgsInicio">
                 <!-- <article class="personajes-ar"> -->
-                    <a href="#">
+                    <a href="https://es.wikipedia.org/wiki/Carl_Weathers" target="_blank">
                         <div class="personajes-ct">
                             <div>
                                 <img src="images/Personajes/blog-5.jpg" height="300px" width="400px" alt="Greef Karga">
@@ -111,7 +111,7 @@
             </div>
             <div class="imgsInicio">
                 <!-- <article class="personajes-ar"> -->
-                    <a href="#">
+                    <a href="https://es.wikipedia.org/wiki/Giancarlo_Esposito" target="_blank">
                         <div class="personajes-ct">
                             <div>
                                 <img src="images/Personajes/blog-6.jpg" height="300px" width="400px" alt="Moff Gideon">
@@ -126,7 +126,7 @@
             </div>
             <div class="imgsInicio">
                 <!-- <article class="personajes-ar"> -->
-                    <a href="#">
+                    <a href="https://es.wikipedia.org/wiki/Katee_Sackhoff" target="_blank">
                         <div class="personajes-ct">
                             <div>
                                 <img src="images/Personajes/BO-KATAN-KRYZE.jpg" height="300px" width="400px" alt="Bo-Katan Kryze">
@@ -141,7 +141,7 @@
             </div>
             <div class="imgsInicio">
                 <!-- <article class="personajes-ar"> -->
-                    <a href="#">
+                    <a href="https://es.wikipedia.org/wiki/Werner_Herzog" target="_blank">
                         <div class="personajes-ct">
                             <div>
                                 <img src="images/Personajes/el-cliente.webp" height="400px" width="400px" alt="El cliente">
@@ -156,7 +156,7 @@
             </div>
             <div class="imgsInicio">
                 <!-- <article class="personajes-ar"> -->
-                    <a href="#">
+                    <a href="https://es.wikipedia.org/wiki/Temuera_Morrison" target="_blank">
                         <div class="personajes-ct">
                             <div>
                                 <img src="images/Personajes/boba-fett.webp" height="400px" width="600px" alt="Boba fett">
@@ -175,7 +175,7 @@
             </div>
             <div class="imgsInicio">
                 <!-- <article class="personajes-ar"> -->
-                    <a href="#">
+                    <a href="https://es.wikipedia.org/wiki/Rosario_Dawson" target="_blank">
                         <div class="personajes-ct">
                             <div>
                                 <img src="images/Personajes/ahsoka-tano-rosario dawson.webp" height="300px" width="400px" alt="Ahsoka tano">
@@ -191,7 +191,7 @@
             </div>
             <div class="imgsInicio">
                 <!-- <article class="personajes-ar"> -->
-                    <a href="#">
+                    <a href="https://es.wikipedia.org/wiki/Emily_Swallow" target="_blank">
                         <div class="personajes-ct">
                             <div>
                                 <img src="images/Personajes/armera-emily-swallow.webp" height="300px" width="400px" alt="La Armera">
@@ -206,7 +206,7 @@
             </div>
             <div class="imgsInicio">
                 <!-- <article class="personajes-ar"> -->
-                    <a href="#">
+                    <a href="https://es.wikipedia.org/wiki/Nick_Nolte" target="_blank">
                         <div class="personajes-ct">
                             <div>
                                 <img src="images/Personajes/kuiil-nick-nolte.webp" height="300px" width="400px" alt="kuiil">
@@ -222,7 +222,7 @@
             </div>
             <div class="imgsInicio">
                 <!-- <article class="personajes-ar"> -->
-                    <a href="#">
+                    <a href="https://es.wikipedia.org/wiki/Amy_Sedaris" target="_blank">
                         <div class="personajes-ct">
                             <div>
                                 <img src="images/Personajes/peli-motto-amy-sedaris.webp" height="300px" width="400px" alt="Peli Motto">
@@ -237,7 +237,7 @@
             </div>
             <div class="imgsInicio">
                 <!-- <article class="personajes-ar"> -->
-                    <a href="#">
+                    <a href="https://es.wikipedia.org/wiki/Taika_Waititi" target="_blank">
                         <div class="personajes-ct">
                             <div>
                                 <img src="images/Personajes/ig-11-taika-waititi.webp" height="300px" width="400px" alt="IG 11">
