--- a/reseñas.html
+++ b/reseñas.html
@@ -43,7 +43,7 @@
             <div class="reseñas">
                 <div class="imgsInicio" title="Ver más reseñas">
                     <a href="https://www.google.com/search?q=rese%C3%B1as+mandalorian&rlz=1C1VDKB_enAR1093AR1093&oq=rese%C3%B1as+mandalorian&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIHCAEQIRigATIHCAIQIRifBTIHCAMQIRifBTIHCAQQIRifBTIHCAUQIRifBTIHCAYQIRifBTIHCAcQIRifBTIHCAgQIRifBTIHCAkQIRifBdIBCDYxNTBqMGo3qAIAsAIA&sourceid=chrome&ie=UTF-8">
-                        <div>
+                        <div class="reseñasimg">
                             <img style="width:100px; height:100px;" src="images/iconos/icons01.ico" alt="kuiil montando un  Blurrg">
                         </div>
                         <h4>Hitori Torres</h4>
@@ -57,7 +57,7 @@
                 </div>
                 <div class="imgsInicio" title="Ver más reseñas">
                     <a href="https://www.google.com/search?q=rese%C3%B1as+mandalorian&rlz=1C1VDKB_enAR1093AR1093&oq=rese%C3%B1as+mandalorian&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIHCAEQIRigATIHCAIQIRifBTIHCAMQIRifBTIHCAQQIRifBTIHCAUQIRifBTIHCAYQIRifBTIHCAcQIRifBTIHCAgQIRifBTIHCAkQIRifBdIBCDYxNTBqMGo3qAIAsAIA&sourceid=chrome&ie=UTF-8">
-                        <div>
+                        <div class="reseñasimg">
                             <img style="width:100px; height:100px;" src="images/iconos/icons01.ico" alt="Mando y grogu encuentro">
                         </div>
                         <h4>Diego Rojas</h4>
@@ -68,7 +68,7 @@
                 </div>
                 <div class="imgsInicio" title="Ver más reseñas">
                     <a href="https://www.google.com/search?q=rese%C3%B1as+mandalorian&rlz=1C1VDKB_enAR1093AR1093&oq=rese%C3%B1as+mandalorian&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIHCAEQIRigATIHCAIQIRifBTIHCAMQIRifBTIHCAQQIRifBTIHCAUQIRifBTIHCAYQIRifBTIHCAcQIRifBTIHCAgQIRifBTIHCAkQIRifBdIBCDYxNTBqMGo3qAIAsAIA&sourceid=chrome&ie=UTF-8">
-                        <div>
+                        <div class="reseñasimg">
                             <img style="width:100px; height:100px;" src="images/iconos/icons01.ico"alt="Mando animacion">
                         </div>
                         <h4>Carlos Jimenez</h4>
